# clipnotify-for-desktop-os

./: ClipnotifyMac.swift  README.md  clipnotify_win.py  go.mod  main.go  pyproject.toml  readme.md  todo.md
