[tool.poetry]
name = "clipnotify-win"
version = "0.1.0"
description = ""
authors = ["ajit <zlksnkwork@gmail.com>"]
readme = "README.md"
packages = [{include = "clipnotify_win"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
